# indi-3rdparty

./: CMakeLists.txt
debian/indi-onstep-aux/: changelog  control  rules
indi-onstep-aux/: CMakeLists.txt  INSTALL.txt  README.txt  config.h.cmake  indi_onstep_aux.xml.cmake  onstep_aux.cpp  onstep_aux.h
